--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "vidly",
   "version": "1.0.0",
@@ -12,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/joi": "^15.0.3",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "mongoose": "^5.5.9"
   }
 }
