Add transactions logic to rentals API

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hapi/joi": "^15.0.3",
     "express": "^4.16.4",
+    "fawn": "^2.1.5",
     "mongoose": "^5.5.9"
   }
 }
