--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hapi/joi": "^15.0.3",
     "express": "^4.16.4",
     "fawn": "^2.1.5",
+    "joi-objectid": "^2.0.0",
     "mongoose": "^5.5.9"
   }
 }
