--- a/package.json
+++ b/package.json
@@ -11,9 +11,16 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/joi": "^15.0.3",
+    "bcrypt": "^3.0.6",
+    "config": "^3.1.0",
     "express": "^4.16.4",
+    "express-async-errors": "^3.1.1",
     "fawn": "^2.1.5",
     "joi-objectid": "^2.0.0",
-    "mongoose": "^5.5.9"
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.11",
+    "mongoose": "^5.5.9",
+    "winston": "^3.2.1",
+    "winston-mongodb": "^5.0.0"
   }
 }
